--- a/contactus.html
+++ b/contactus.html
@@ -19,7 +19,7 @@
 <body>
     <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="./index.html">Le Chocolat</a>
+            <a class="navbar-brand" href="#"><img src="images/logo.png" width="54"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -54,18 +54,21 @@
                     <p>We combine experience with creativity to create innovative tastes based on classic chocolate recipes. Our creations will travel you in the chocolate world!</p>
                 </div>
                 <div class="col col-sm">
+                    <img src="images/logo.png" class="img-fluid">
                 </div>
             </div>
         </div>
     </header>
 
+    <nav aria-label="breadcrumb">
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Contact us</li>
+        </ol>
+    </nav>
+
     <div class="container">
-        <nav aria-label="breadcrumb">
-            <ol class="breadcrumb">
-                <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
-                <li class="breadcrumb-item active" aria-current="page">Contact us</li>
-            </ol>
-        </nav>
+
         <div class="row row-header">
             <div class="col-12">
                 <h3>Contact Us</h3>
@@ -80,21 +83,22 @@
             <div class="col-12 col-sm-4 offset-sm-1">
                 <h5>Our Address</h5>
                 <address style="font-size: 100%">
-                        121, Clear Wave Road<br>
-                        Clear Wave Road, Aloha<br>
-                        HAWAII<br>
-		              <i class="fa fa-phone"></i>: +987 6543 2100<br>
-		              <i class="fa fa-fax"></i>: +987 6543 2101<br>
-		              <i class="fa fa-envelope"></i>:
-                        <a href="mailto:chocolat@nomail.net">chocolat@nomail.net</a>
-		           </address>
+                    121, Clear Wave Road<br>
+                    Clear Wave Road, Aloha<br>
+                    HAWAII<br>
+                    <i class="fa fa-phone"></i>: +987 6543 2100<br>
+                    <i class="fa fa-fax"></i>: +987 6543 2101<br>
+                    <i class="fa fa-envelope"></i>:
+                    <a href="mailto:chocolat@nomail.net">chocolat@nomail.net</a>
+                </address>
             </div>
             <div class="col-12 col-sm-6 offset-sm-1">
                 <h5>Map of our Location</h5>
             </div>
             <div class="col-12 col-sm-11 offset-sm-1">
                 <div class="btn-group" role="group" aria-label="Communication tools">
-                    <a role="button" class="btn btn-primary" href="tel:+98765432100 "><i class="fa fa-phone"></i> Call</a>
+                    <a role="button" class="btn btn-primary" href="tel:+98765432100 "><i class="fa fa-phone"></i>
+                        Call</a>
                     <a role="button" class="btn btn-info"><i class="fa fa-skype"></i> Skype</a>
                     <a role="button" class="btn btn-success" href="mailto:chocolat@nomail.net">
                         <i class="fa fa-envelope-o"></i> Email</a>
@@ -144,15 +148,15 @@
                 <div class="form-group row">
                     <div class="form-check col-md-6 offset-md-2">
                         <label class="form-check-label">
-                             <input type="checkbox" class="form-check-input" name="approve" value="">
-                             <strong>May we contact you?</strong>
-                         </label>
+                            <input type="checkbox" class="form-check-input" name="approve" value="">
+                            <strong>May we contact you?</strong>
+                        </label>
                     </div>
                     <div class="col-md-3 offset-md-1">
                         <select class="form-control">
-                             <option>Tel.</option>
-                             <option>Email</option>
-                         </select>
+                            <option>Tel.</option>
+                            <option>Email</option>
+                        </select>
                     </div>
                 </div>
                 <div class="form-group row">
@@ -194,8 +198,9 @@
                         HAWAII<br>
                         <i class="fa fa-phone fa-lg"></i>: +987 6543 2100<br>
                         <i class="fa fa-fax fa-lg"></i>: +987 6543 2101<br>
-                        <i class="fa fa-envelope fa-lg"></i>: <a href="mailto:chocolat@nomail.net">chocolat@nomail.net</a>
-		               </address>
+                        <i class="fa fa-envelope fa-lg"></i>: <a
+                            href="mailto:chocolat@nomail.net">chocolat@nomail.net</a>
+                    </address>
                 </div>
                 <div class="col-sm align-self-center">
                     <div style="text-align:center">
