--- a/index.html
+++ b/index.html
@@ -28,10 +28,14 @@
 
             <div class="collapse navbar-collapse" id="Navbar">
                 <ul class="navbar-nav">
-                    <li class="nav-item active"><a class="nav-link" href="#"><span class="fa fa-home fa-lg"></span> Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./aboutus.html"><span class="fa fa-info fa-lg"></span> About</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span> Menu</a></li>
-                    <li class="nav-item"><a class="nav-link" href="./contactus.html"><span class="fa fa-address-card fa-lg"></span> Contact</a></li>
+                    <li class="nav-item active"><a class="nav-link" href="#"><span class="fa fa-home fa-lg"></span>
+                            Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./aboutus.html"><span
+                                class="fa fa-info fa-lg"></span> About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="#"><span class="fa fa-list fa-lg"></span> Menu</a>
+                    </li>
+                    <li class="nav-item"><a class="nav-link" href="./contactus.html"><span
+                                class="fa fa-address-card fa-lg"></span> Contact</a></li>
                 </ul>
             </div>
 
@@ -106,6 +110,83 @@
         </div>
     </div>
 
+    <div class="row row-content align-items-center justify-content-center">
+        <div class="col-12 col-sm-8">
+            <div class="card">
+                <h3 class="card-header bg-warning text-white">Reserve your baskets</h3>
+                <div class="card-body">
+
+                    <form>
+                        <div class="form-group row">
+                            <label class="col-12 col-sm-3">
+                                Number of baskets
+                            </label>
+                            <div class="col col-sm">
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+                                    <label class="form-check-label" for="inlineRadio1">
+                                        1
+                                    </label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+                                    <label class="form-check-label" for="inlineRadio2">
+                                        2
+                                    </label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3">
+                                    <label class="form-check-label" for="inlineRadio3">
+                                        3
+                                    </label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio4" value="option4">
+                                    <label class="form-check-label" for="inlineRadio4">
+                                        4
+                                    </label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio5" value="option5">
+                                    <label class="form-check-label" for="inlineRadio5">
+                                        5
+                                    </label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio6" value="option6">
+                                    <label class="form-check-label" for="inlineRadio6">
+                                        6
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-12 col-sm-3">
+                                Date and Time
+                            </label>
+                            <div class="input-group col-12 col-sm-4">
+                                <div class="input-group-prepend">
+                                    <span class="input-group-text fa fa-calendar" id="date"></span>
+                                </div>
+                                <input type="date" class="form-control">
+                            </div>
+                            <div class="input-group col-12 col-sm-4">
+                                <div class="input-group-prepend">
+                                    <span class="input-group-text fa fa-clock-o" id="time"></span>
+                                </div>
+                                <input type="time" class="form-control">
+                            </div>
+                        </div>
+
+                        <button type="submit" class="btn btn-primary">Reserve</button>
+                    </form>
+
+                </div>
+            </div>
+        </div>
+
+    </div>
+
     <footer class="footer">
         <div class="container">
             <div class="row">
@@ -126,7 +207,8 @@
                         HAWAII<br>
                         <i class="fa fa-phone fa-lg"></i> +987 6543 2100<br>
                         <i class="fa fa-fax fa-lg"></i> +987 6543 2101<br>
-                        <i class="fa fa-envelope fa-lg"></i> <a href="mailto:chocolat@nomail.net">chocolat@nomail.net</a>
+                        <i class="fa fa-envelope fa-lg"></i> <a
+                            href="mailto:chocolat@nomail.net">chocolat@nomail.net</a>
                     </address>
                 </div>
                 <div class="col col-sm-4 align-self-center">
