--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
                 <span class="navbar-text ml-auto">
                     <a data-toggle="modal" href="#loginModal">
-                       <span class="fa fa-sign-in"></span> Login
+                        <span class="fa fa-sign-in"></span> Login
                 </a>
                 </span>
             </div>
@@ -59,7 +59,7 @@
                 <div class="modal-body">
                     <form class="form-inline">
                         <div class="form-group">
-                            <label class="sr-only" for="exampleInputEmail3">Email 
+                            <label class="sr-only" for="exampleInputEmail3">Email
                                 address
                             </label>
                             <input type="email" class="form-control form-control-sm mr-1" id="exampleInputEmail3" placeholder="Enter email">
@@ -72,8 +72,8 @@
                         </div>
                         <div class="form-check">
                             <label class="form-check-label">
-                                <input class="form-check-input" type="checkbox"> 
-                                  Remember me
+                                <input class="form-check-input" type="checkbox">
+                                Remember me
                             </label>
                         </div>
                     </form>
@@ -83,6 +83,103 @@
                     </button>
                     <button type="submit" class="btn btn-primary btn-sm">
                         Sign in
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="reserveBasketsModal" class="modal fade" role="dialog">
+        <div class="modal-dialog modal-lg" role="content">
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Reserve your baskets </h4>
+                    <button type="button" class="close" data-dismiss="modal">&times</button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group row">
+                            <label class="col-12 col-sm-3">
+                                Number of baskets
+                            </label>
+                            <div class="col col-sm">
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+                                    <label class="form-check-label" for="inlineRadio1">
+                                        1
+                                    </label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio2" value="option2">
+                                    <label class="form-check-label" for="inlineRadio2">
+                                        2
+                                    </label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio3" value="option3">
+                                    <label class="form-check-label" for="inlineRadio3">
+                                        3
+                                    </label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio4" value="option4">
+                                    <label class="form-check-label" for="inlineRadio4">
+                                        4
+                                    </label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio5" value="option5">
+                                    <label class="form-check-label" for="inlineRadio5">
+                                        5
+                                    </label>
+                                </div>
+                                <div class="form-check form-check-inline">
+                                    <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio6" value="option6">
+                                    <label class="form-check-label" for="inlineRadio6">
+                                        6
+                                    </label>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-12 col-sm-3">
+                                Date and Time
+                            </label>
+                            <div class="input-group col-12 col-sm-4">
+                                <div class="input-group-prepend">
+                                    <span class="input-group-text fa fa-calendar" id="date"></span>
+                                </div>
+                                <input type="date" class="form-control">
+                            </div>
+                            <div class="input-group col-12 col-sm-4">
+                                <div class="input-group-prepend">
+                                    <span class="input-group-text fa fa-clock-o" id="time"></span>
+                                </div>
+                                <input type="time" class="form-control">
+                            </div>
+                        </div>
+
+                        <div class="form-group row">
+                            <label class="col-12 col-sm-3">
+                                Home Delivery
+                            </label>
+                            <div class="btn-group col-12 col-sm-3">
+                                <label class="btn btn-success"> <input type="radio" name="section" id="home-Delivery"
+                                        autocomplete="off" checked>Yes </label>
+                                <label class="btn btn-danger"> <input type="radio" name="section" id="non-home-Delivery"
+                                        autocomplete="off">No </label>
+                            </div>
+
+                        </div>
+
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default btn-sm" data-dismiss="modal">Cancel
+                    </button>
+                    <button type="submit" class="btn btn-primary btn-sm">
+                        Submit
                     </button>
                 </div>
             </div>
@@ -100,7 +197,9 @@
                     <img src="images/logo.png" class="img-fluid">
                 </div>
                 <div class="col col-sm-3">
-                    <a class="btn btn-warning" data-toggle="tooltip" data-html="true" title="Or Call us at <br><strong>+ 987 6543 2100</strong>" data-placement="bottom" href="#reserveForm">Reserve your baskets</a>
+                    <a class="btn btn-warning" data-toggle="modal" data-target="#reserveBasketsModal">Reserve your
+                        baskets</a>
+
                 </div>
             </div>
         </div>
@@ -217,7 +316,7 @@
         </div>
     </div>
 
-    <div class="row row-content align-items-center justify-content-center">
+    <!-- <div class="row row-content align-items-center justify-content-center">
         <div class="col-12 col-sm-8">
             <div class="card" id="reserveForm">
                 <h3 class="card-header bg-warning text-white">Reserve your baskets</h3>
@@ -292,7 +391,7 @@
             </div>
         </div>
 
-    </div>
+    </div> -->
 
     <footer class="footer">
         <div class="container">
