--- a/aboutus.html
+++ b/aboutus.html
@@ -276,6 +276,9 @@
     <script src="node_modules/tether/dist/js/tether.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+
+    <!-- link my script -->
+    <script src="js/scripts.js"></script>
 </body>
 
 </html>
