--- a/index.html
+++ b/index.html
@@ -242,6 +242,7 @@
                                 </p>
                             </div>
                         </div>
+
                     </div>
 
                     <a class="carousel-control-prev" href="#mycarousel" role="button" data-slide="prev">
@@ -252,6 +253,15 @@
                         <span class="carousel-control-next-icon" aria-hidden="true"></span>
                         <span class="sr-only">Next</span>
                     </a>
+
+                    <div class="btn-group" id="carouselButtons">
+                        <button class="btn btn-danger btn-sm" id="carousel-pause">
+                          <span class="fa fa-pause"></span>
+                        </button>
+                        <button class="btn btn-danger btn-sm" id="carousel-play">
+                          <span class="fa fa-play"></span>
+                        </button>
+                    </div>
 
                     <ol class="carousel-indicators">
                         <li data-target="#mycarousel" data-slide-to="0" class="active"></li>
@@ -446,6 +456,9 @@
     <script src="node_modules/tether/dist/js/tether.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+
+    <!-- link my script -->
+    <script src="js/scripts.js"></script>
     <!-- To add the tooltips -->
     <script>
         $(function() {
