--- a/contactus.html
+++ b/contactus.html
@@ -34,7 +34,7 @@
                             <span class="fa fa-info fa-lg"> </span> About</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">
+                        <a class="nav-link" href="./menu.html">
                             <span class="fa fa-list fa-lg"></span> Menu</a>
                     </li>
                     <li class="nav-item active">
