Alexandros final site

--- a/menu.html
+++ b/menu.html
@@ -16,6 +16,9 @@
     <!-- my styles is after Bootstrap css in order to override it -->
     <link href="css/styles.css" rel="stylesheet">
 
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+
 </head>
 
 <body>
@@ -53,16 +56,160 @@
         </div>
     </header>
 
-    <nav aria-label="breadcrumb">
-        <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Menu</li>
-        </ol>
-    </nav>
+
 
     <div class="container">
-        <h3>Menu Under heavy Construction</h3>
 
+        <nav aria-label="breadcrumb">
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="./index.html">Home</a></li>
+                <li class="breadcrumb-item active" aria-current="page">Menu</li>
+            </ol>
+        </nav>
+
+
+        <h3>Menu</h3>
+
+        <div class="row">
+            <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
+                <div class="card card-inverse card-primary ">
+                    <img class="card-img-top" src="images/chocolate1.jpg" height="200">
+                    <blockquote class="card-blockquote p-3">
+                        <p>Chocolate Bar</p>
+                        <footer>
+                            <small>
+                      Your classic dose of chocolate
+                    </small>
+                        </footer>
+                    </blockquote>
+                    <div class="card-footer">
+                        <button class="btn btn-outline-success btn-sm ">1.00€</button>
+                    </div>
+                </div>
+
+
+            </div>
+            <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
+                <div class="card card-inverse card-primary ">
+                    <img class="card-img-top" src="images/Chocolate-muffins-scaled.jpg" height="200">
+                    <blockquote class="card-blockquote p-3">
+                        <p>Muffin</p>
+                        <footer>
+                            <small>
+                          Easy to pack and eat anywhere
+                        </small>
+                        </footer>
+                    </blockquote>
+                    <div class="card-footer">
+                        <button class="btn btn-outline-success btn-sm ">1.50€</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
+                <div class="card card-inverse card-primary ">
+                    <img class="card-img-top" src="images/chocolate_roulade_79152_16x9.jpg" height="200">
+                    <blockquote class="card-blockquote p-3">
+                        <p>Chocolate Roulade</p>
+                        <footer>
+                            <small>
+                          Perfect way to end your meal
+                        </small>
+                        </footer>
+                    </blockquote>
+                    <div class="card-footer">
+                        <button class="btn btn-outline-success btn-sm ">6.00€</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
+                <div class="card card-inverse card-primary ">
+                    <img class="card-img-top" src="images/chocolate_devils.jpg" height="200">
+                    <blockquote class="card-blockquote p-3">
+                        <p>Chocolate Devils</p>
+                        <footer>
+                            <small>
+                          A small dose of hapiness
+                        </small>
+                        </footer>
+                    </blockquote>
+                    <div class="card-footer">
+                        <button class="btn btn-outline-success btn-sm ">0.50€</button>
+                    </div>
+                </div>
+            </div>
+
+
+        </div>
+        <div class="row">
+            <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
+                <div class="card card-inverse card-primary ">
+                    <img class="card-img-top" src="images/6291-chocolate_cookies-732x549-thumbnail-732x549.jpg" height="200">
+                    <blockquote class="card-blockquote p-3">
+                        <p>Chocolate Cookies</p>
+                        <footer>
+                            <small>
+                      Loved by all ages
+                    </small>
+                        </footer>
+                    </blockquote>
+                    <div class="card-footer">
+                        <button class="btn btn-outline-success btn-sm ">0.50€</button>
+                    </div>
+                </div>
+
+
+            </div>
+            <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
+                <div class="card card-inverse card-primary ">
+                    <img class="card-img-top" src="images/lr-0953-720x405.jpg" height="200">
+                    <blockquote class="card-blockquote p-3">
+                        <p>Chocolate Cake</p>
+                        <footer>
+                            <small>
+                          Difficult to resist
+                        </small>
+                        </footer>
+                    </blockquote>
+                    <div class="card-footer">
+                        <button class="btn btn-outline-success btn-sm ">6.00€</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
+                <div class="card card-inverse card-primary ">
+                    <img class="card-img-top" src="images/Valentine-Chocolate-Heart-of-Truffles-41.jpg" height="200">
+                    <blockquote class="card-blockquote p-3">
+                        <p>Chocolate Heart</p>
+                        <footer>
+                            <small>
+                          Perfect gift for Valentine's day
+                        </small>
+                        </footer>
+                    </blockquote>
+                    <div class="card-footer">
+                        <button class="btn btn-outline-success btn-sm ">10.00€</button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
+                <div class="card card-inverse card-primary ">
+                    <img class="card-img-top" src="images/sparkling-kisses-3001899_640.jpg" height="200">
+                    <blockquote class="card-blockquote p-3">
+                        <p>Sparkling Kisses</p>
+                        <footer>
+                            <small>
+                          Small but tasty
+                        </small>
+                        </footer>
+                    </blockquote>
+                    <div class="card-footer">
+                        <button class="btn btn-outline-success btn-sm ">0.50€</button>
+                    </div>
+                </div>
+            </div>
+
+
+        </div>
     </div>
 
     <footer class="footer">
