--- a/contactus.html
+++ b/contactus.html
@@ -7,10 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
 
-    <!-- Bootstrap CSS -->
+    <!-- build:css css/main.css -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
     <link href="css/styles.css" rel="stylesheet">
+    <!-- endbuild -->
 
     <title>Le Chocolat: Contact Us</title>
 
@@ -228,6 +229,7 @@
         </div>
     </footer>
 
+    <!-- build:js js/main.js -->
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/tether/dist/js/tether.min.js"></script>
@@ -235,6 +237,7 @@
 
     <!-- link my script -->
     <script src="js/scripts.js"></script>
+    <!-- endbuild -->
 </body>
 
 </html>
