--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <!-- Bootstrap CSS -->
+
+    <!-- build:css css/main.css -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <!-- Font awesome style -->
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
-    <!-- my styles is after Bootstrap css in order to override it -->
     <link href="css/styles.css" rel="stylesheet">
+    <!-- endbuild -->
 </head>
 
 <body>
@@ -451,6 +451,7 @@
         </div>
     </footer>
 
+    <!-- build:js js/main.js -->
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/tether/dist/js/tether.min.js"></script>
@@ -459,12 +460,14 @@
 
     <!-- link my script -->
     <script src="js/scripts.js"></script>
+    <!-- endbuild -->
+
     <!-- To add the tooltips -->
-    <script>
+    <!-- <script>
         $(function() {
             $('[data-toggle="tooltip"]').tooltip()
         })
-    </script>
+    </script> -->
 </body>
 
 </html>
