--- a/menu.html
+++ b/menu.html
@@ -9,12 +9,12 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <!-- Bootstrap CSS -->
+
+    <!-- build:css css/main.css -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <!-- Font awesome style -->
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
-    <!-- my styles is after Bootstrap css in order to override it -->
     <link href="css/styles.css" rel="stylesheet">
+    <!-- endbuild -->
 
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
     <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
@@ -261,6 +261,7 @@
         </div>
     </footer>
 
+    <!-- build:js js/main.js -->
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
     <script src="node_modules/jquery/dist/jquery.min.js"></script>
     <script src="node_modules/tether/dist/js/tether.min.js"></script>
@@ -269,6 +270,7 @@
 
     <!-- link my script -->
     <script src="js/scripts.js"></script>
+    <!-- endbuild -->
 </body>
 
 </html>
